[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "franquestions-observatorio"
version = "2.2.1"
description = "MVP del Observatorio Economico FranQuestions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "sqlalchemy>=2.0,<3",
  "psycopg[binary]>=3.2,<4",
  "pydantic-settings>=2.5,<3",
  "httpx>=0.27,<1",
  "pandas>=2.2,<3",
  "openpyxl>=3.1,<4",
  "pdfplumber>=0.11,<1",
  "streamlit>=1.39,<2",
  "plotly>=5.24,<7",
  "lxml>=5,<7",
  "xlrd>=2,<3",
]

[project.optional-dependencies]
dev = ["pytest>=8.3,<9", "pytest-cov>=5,<7", "ruff>=0.7,<1"]

[tool.setuptools.packages.find]
include = ["fq_observatorio*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
